# ipa-demo

./: README.md
demo_moveit_setup/: .setup_assistant  CMakeLists.txt  package.xml
demo_moveit_setup/config/: controllers.yaml  ompl_planning.yaml  ros_controllers.yaml  ur5e_egp50.srdf
demo_moveit_setup/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  exec_demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5e_egp50_moveit_controller_manager.launch.xml  ur5e_egp50_moveit_planning_execution.launch  warehouse.launch
demo_resources/: CMakeLists.txt  package.xml
demo_resources/launch/: ur5e_egp50_upload.launch  view_ur5e_egp50.launch
demo_resources/scxml/: closegripper.scxml  demo_all.scxml  moveto.scxml
demo_resources/urdf/: cell.urdf.xacro  ur5e_robot_egp50.urdf  ur5e_robot_egp50.urdf.xacro
locate_object/: locate_object.yaml
locate_object/locate_object_skill_client/: CMakeLists.txt  package.xml  setup.py
locate_object/locate_object_skill_msgs/: CMakeLists.txt  package.xml
locate_object/locate_object_skill_scxml/: locate_object_skill.scxml
locate_object/locate_object_skill_server/: CMakeLists.txt  package.xml  setup.py
locate_object/locate_object_skill_server/launch/: run.launch
locate_object/locate_object_skill_server/src/: locate_object_skill.py  locate_object_skill_class.py
move_to_skill/: move_to_skill.yaml
move_to_skill/move_to_skill_client/: CMakeLists.txt  package.xml  setup.py
move_to_skill/move_to_skill_msgs/: CMakeLists.txt  package.xml
move_to_skill/move_to_skill_msgs/action/: MoveToSkill.action
move_to_skill/move_to_skill_server/: CMakeLists.txt  package.xml  setup.py
move_to_skill/move_to_skill_server/launch/: run.launch
move_to_skill/move_to_skill_server/src/: move_to_skill.py  move_to_skill_class.py
object_tracked/: CMakeLists.txt  package.xml
object_tracked/launch/: run.launch  tracking.launch
object_tracked/model/cube/: cube.init  cube.wrl
operate_gripper/: operate_gripper.yaml
operate_gripper/operate_gripper_skill_server/: CMakeLists.txt  package.xml  setup.py
operate_gripper/operate_gripper_skill_server/launch/: run.launch
operate_gripper/operate_gripper_skill_server/src/: operate_gripper_skill.py  operate_gripper_skill_class.py
skiros2_demo_ipa/: move_to_skill_class.py
(+12 files in other folders)
