<?xml version="1.0"?>
<package>
  <name>demo_resources</name>
  <version>0.0.0</version>
  <description>The operate_gripper_skill_server package</description>

  <maintainer email="todo@todo.todo">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>
  
</package>
